import java.util.ArrayList;

public class AgentBureau
{
    int portfoliosize = 0;
    ArrayList<Clients> portfolio;

    private void makePortfolio()
    {

    }


}

