public class Bank
{
    public Bank()
    {

    }

    private void addMoney()
    {

    }

    private void withdrawMoney()
    {

    }

    private void taxes()
    {

    }

    private void isBankrupt()
    {

    }

    private int getBalance()
    {

    return 0;
    }

    private void setBalance(int balance)
    {
        int playerBalance = balance;
    }

}
