public class Clients
{
    String name, position;
    int value, age, potential;


    public Clients()
    {

    }
}
