public class ClubNegotiations implements Negotiations
{

    @Override
    public void negotiationType() {

    }

    @Override
    public void acceptOffer() {

    }

    @Override
    public void declineOffer() {

    }

    @Override
    public void addClient(Player player, Clients client) {

    }

    @Override
    public void removeClient(Player player, Clients client) {

    }
}
