public class GamePlay
{
    Player player = new Player();
    Negotiations negotiations;
}
