public class GameSetup
{
    Player player = new Player();
    Bank bank = new Bank();
    ClientPool pool = new ClientPool();
    AgentBureau bureau = new AgentBureau();

}
