import java.util.ArrayList;

public class Player
{
    Bank bank = new Bank();
    AgentBureau agent = new AgentBureau();
    ArrayList<Clients> portfolio = agent.portfolio; // The players portfolio


    public Player()
    {

    }


}
